--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.8.4
   cached_network_image: ^3.2.3
   get: ^4.6.5
+  slideable: ^0.0.2
 
 dev_dependencies:
   flutter_test:
