--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.2.3
   get: ^4.6.5
   slideable: ^0.0.2
+  firebase_storage: ^11.2.6
 
 dev_dependencies:
   flutter_test:
