--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.6.5
   slideable: ^0.0.2
   firebase_storage: ^11.2.6
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
